<resources>
    <string name="app_name">Project</string>
    <string name="Account">Already have an Account?</string>
    <string name="login_here">Login Here !</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="full_name">Full Name</string>
    <string name="student_id">Student Id</string>
    <string name="no_connection">No Connection</string>
    <string name="role">Role</string>
    <string name="name">Name :</string>
    <string name="s_id">S.id :</string>
    <string name="batch">Batch :</string>
    <string name="xxxx">xxxx</string>
    <string name="create_teacher">Create Teacher</string>
    <string name="designation">Designation</string>
    <string name="close">Close</string>

    <array name="teacher">
        <item>Lecturer</item>
        <item>Assistant Professor</item>
        <item>Associate Professor</item>
        <item>Professor</item>
    </array>

    <array name="course_code">
        <item>CSE-3101</item>
        <item>CSE-3102</item>
        <item>CSE-3103</item>
        <item>CSE-3104</item>
    </array>


    <array name="rooms">
        <item>Classroom</item>
        <item>Laboratory</item>
    </array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="batches">Batches</string>
    <string name="todo">TODO</string>
    <string name="batch_name">Batch Name</string>
    <string name="_2k">2k</string>
    <string name="add">Add</string>
    <string name="welcome">Welcome</string>
    <string name="academic_year">Academic Year</string>
    <string name="projector">Projector</string>
    <string name="all_batches">All Batches</string>
    <string name="title_activity_teacher_main_dashboard">TeacherMainDashboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="return_key">Return Key</string>
    <string name="do_you_want_to_return_the_key">Do you want to return the key?</string>
    <string name="upload_syllebus">Upload Syllebus</string>
    <string name="date_dd_mm_yyyy">Date \'dd-mm-yyyy\'</string>
    <string name="day">Day</string>
    <string name="office_login">Office Login</string>


</resources>