<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher.AddTeacher">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/chip1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/create_teacher"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="@color/primary"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <ImageButton
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="@null"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:tint="@color/primary"
            android:contentDescription="@string/todo"
            tools:ignore="ContentDescription" />


    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_below="@id/chip1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pro_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_outline_person_24"
                    android:tint="@color/white"
                    app:civ_border_color="@color/primary"
                    app:civ_border_width="1dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/pro_image"
                    android:id="@+id/name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/full_name"
                    android:textColorHint="@color/primary"
                    app:boxStrokeColor="@color/primary"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_baseline_edit_24"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/designation"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_below="@id/name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bottom_button"
                    android:dropDownSelector="@color/primary"
                    android:ems="5"
                    android:entries="@array/teacher"
                    android:fontFamily="serif"
                    android:padding="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/roll"
                    android:layout_below="@id/designation"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="Phone no"
                    android:textColorHint="@color/primary"
                    app:boxStrokeColor="@color/primary"
                    app:startIconDrawable="@drawable/ic_outline_phone_android_24"
                    app:endIconMode="clear_text"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    android:layout_below="@id/roll"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/primary"
                    app:boxStrokeColor="@color/primary"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_outline_email_24"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    android:layout_below="@id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/primary"
                    app:boxStrokeColor="@color/primary"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_outline_lock_24"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>









            </RelativeLayout>

        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:background="@color/primary"
        android:textColor="@color/white" />

</RelativeLayout>