<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".account.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="120dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:ignore="UselessParent">


                <RelativeLayout
                    android:id="@+id/portion1"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@color/primary">


                    <LinearLayout
                        android:id="@+id/d1"
                        android:layout_width="160dp"
                        android:layout_height="120dp"
                        android:background="@drawable/right_corner"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="10dp"
                            android:src="@drawable/logo_1"
                            app:tint="@color/primary"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/d2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/d1"
                        android:gravity="center"
                        android:orientation="vertical">



                    </LinearLayout>


                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/portion2"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_below="@+id/portion1"
                    android:background="@drawable/ic_wave"
                    android:backgroundTint="@color/primary" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/portion2"
                    android:id="@+id/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/primary"
                    app:boxStrokeColor="@color/primary"
                    app:startIconDrawable="@drawable/ic_outline_email_24"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@id/email"
                    android:id="@+id/password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/primary"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/primary"
                    app:startIconDrawable="@drawable/ic_outline_lock_24"
                    app:startIconTint="@color/primary">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/forgetpassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/forgot_password"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/forgetpassword"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/createnew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/login"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="end"
                    android:text="@string/create_account"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/primary"
                    android:textStyle="bold" />







            </RelativeLayout>




        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/portion3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ic_wave"
        android:backgroundTint="@color/primary"
        android:orientation="vertical"
        android:rotation="180" />










</RelativeLayout>